--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: rgb(255, 255, 255);
+    background-color: #eeeeee;
     color: black;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -13,12 +13,12 @@
 }
 
 .navbar.expanded {
-    width: 20%;
+    width: 20vw;
     height: auto;
 }
 
 .navbar.collapsed .navbar-content {
-    display: none;
+    transform: translateX(-20vw);
 }
 
 .navbar.expanded .navbar-content {
@@ -26,12 +26,20 @@
     flex-direction: column;
     justify-items: center;
     align-items: center;
+    transform: translateX(0vw);
+    transition: all 0.5s ease;
 }
 
 .navbar-toggle-btn {
     margin: 1vw 0;
     width: 3vw;
     height: 3vw;
+}
+
+.navbar-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .navigation {
@@ -59,5 +67,19 @@
 
 .nagivation .indicator.unselected {
     border: none;
+}
+
+.nav-filter-container {
+    width: 100%;
+    height: 100%;
+    flex: 1;
+}
+
+.year-filter-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
