--- a/client/src/components/DoubleSlider/DoubleSlider.css
+++ b/client/src/components/DoubleSlider/DoubleSlider.css
@@ -33,7 +33,9 @@
     border-radius: 20px;
     border: 4px solid white;
 }
-
 .sliderThumb:active {
     cursor: grabbing;
+}
+.sliderThumb:hover {
+    transform: scale(1.2);
 }
