--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #9c9c9c;
+  background-color: #c3c2c2;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
