--- a/client/src/components/DoubleSlider/DoubleSlider.css
+++ b/client/src/components/DoubleSlider/DoubleSlider.css
@@ -1,12 +1,11 @@
 .sliderRoot {
-    width: 80%;
+    width: 90%;
     height: 10px;
     position: relative;
     display: flex;
     align-items: center;
     background: red;
-    margin-top: 20px;
-    margin-bottom: 10px;
+    margin: 10px 0 15px;
     border-radius: 6px;
 }
 
