--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -1,5 +1,28 @@
+.dashboard-view {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .dashboard-container {
     width: 100%;
-    height: 100%;
+    height: 92%;
     text-align: center;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+.global-kpi-container {
+    width: 100%;
+    height: 130px;
+    padding: 20px;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 20px;
+}
+.generic-chart-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
