--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -11,6 +11,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .global-kpi-container {
     width: 100%;
@@ -20,6 +21,32 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 20px;
+}
+
+a.toggle-company-kpi {
+    width: 200px;
+    text-decoration: underline;
+}
+a.toggle-company-kpi:hover {
+    cursor: pointer;
+    color: darkblue;
+}
+.company-kpi-container {
+    width: 100%;
+    height: 620px;
+    background-color: rgb(1, 1, 145);
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-auto-flow: column;
+    gap: 20px;
+    padding: 10px 0 10px 10px;
+    box-sizing: border-box;
+    overflow-x: auto;
+    transition: all 0.5s ease;
+}
+.company-kpi-container.collapsed {
+    transform: translateY(-50%) scaleY(0%);
+    transition: all 0.5s ease;
 }
 .generic-chart-container {
     flex: 1;
