--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -112,10 +112,12 @@
     grid-template-columns: repeat(2, 1fr);
     grid-auto-flow: row;
     gap: 10px;
-    padding: 0 5px;
+    padding: 0;
     box-sizing: border-box;
+    border-left: 5px solid #ddd;
+    border-right: 5px solid #ddd;
+    background-color: #bbb;
     flex: 1;
-    background-color: #ccc;
 }
 .company-filter-contain::-webkit-scrollbar {
     display: none;
