--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -34,7 +34,7 @@ a.toggle-company-kpi:hover {
 .company-kpi-container {
     width: 100%;
     height: 620px;
-    background-color: rgb(1, 1, 145);
+    background: linear-gradient(to top left, rgb(0, 0, 117),rgb(80, 80, 220));
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-auto-flow: column;
