--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    max-height: 90vh;
+    max-height: 89vh;
     background-color: #ddd;
     color: black;
     border-top-right-radius: 10px;
@@ -31,6 +31,14 @@
     margin: 1vw 0;
     width: 3vw;
     height: 3vw;
+    background-color: rgb(0,0,0,0);
+    border: 4px solid black;
+    padding: 0;
+}
+.navbar-toggle-btn img {
+    width: 2vw;
+    height: 2vw;
+    margin: 0.3vw 0 0 0;
 }
 
 .navbar-content {
@@ -46,6 +54,7 @@
     text-align: center;
     justify-content: space-between;
     padding: 5px 0;
+    font-size: 1.6rem;
 }
 .navigation:hover {
     cursor: pointer;
@@ -60,16 +69,22 @@
 }
 .indicator {
     width: 10px;
-    height: 142%;
+    height: 127%;
     border-radius: 0 5px 5px 0;
     box-sizing: border-box;
-    transform: translateY(-14%);
+    transform: translateY(-11%) translateX(8%);
 }
 .navigation .indicator.selected {
     border: 6px solid #4b6fbc;
 }
 .nagivation .indicator.unselected {
     border: none;
+}
+.navigation div img {
+    height: 25px;
+    width: auto;
+    position: relative;
+    top: 3px;
 }
 
 .nav-filter-container {
@@ -86,25 +101,39 @@
     flex-direction: column;
     align-items: center;
 }
+.filter-label {
+    align-self: flex-start;
+    padding: 5px;
+    font-weight: bold;
+}
+.year-range-display {
+    font-size: 0.9rem;
+}
 
 .company-filter-util-btns {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 .company-filter-util-btn {
     padding: 0 20px;
-    height: 30px;
+    height: 25px;
     box-sizing: border-box;
+    font-size: 0.75rem;
 }
 .company-filter-util-btn:hover {
     border: 3px solid lightskyblue;
     color: lightskyblue;
 }
+.blankSpacer {
+    height: 1px;
+    width: 7vw;
+    /*background-color: red;*/
+}
 
 .company-filter-container {
     width: 100%;
-    max-height: 83%;
+    max-height: 72%;
     margin: 10px 0 0 0;
     overflow-y: auto;
     scrollbar-width: none;
