--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -6,7 +6,8 @@
     border-bottom-right-radius: 10px;
     margin: 10px 0;
     transition: all 1s ease;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    z-index: 1;
 }
 .navbar.collapsed {
     width: 5%;
