--- a/client/src/components/CompanyKPI/CompanyKPI.css
+++ b/client/src/components/CompanyKPI/CompanyKPI.css
@@ -1,4 +1,6 @@
 .company-kpi-card {
+    max-height: 300px;
+    max-width: 300px;
     background-color: #ddd;
     border-radius: 20px;
     box-shadow: 7px 7px 7px rgb(0, 0, 0, 0.5);
